objects/OwnBackup_Credential__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of OwnBackup credentials.</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>OwnBackup account email address.</description>
        <inlineHelpText>OwnBackup account email address.</inlineHelpText>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>OwnBackup account password.</description>
        <inlineHelpText>OwnBackup account password.</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region this account is located in for the API calls to target the correct region URL endpoint. For example app1, hipaa1, emea1, emea4, app9, etc.</description>
        <inlineHelpText>The region this account is located in for the API calls to target the correct region URL endpoint. For example app1, hipaa1, emea1, emea4, app9, etc.</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OwnBackup Credential</label>
</CustomObject>